<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/backgroundImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:contentDescription="@string/select_player_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/select_player" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/lobster"
        android:text="@string/connect_four"
        android:textColor="@color/colorPrimary"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/player_1_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/subTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="136dp"
        android:text="@string/please_enter_the_name"
        app:layout_constraintBottom_toTopOf="@+id/player_1_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="0.933" />

    <ImageView
        android:id="@+id/redCircle"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/redcircleplayer"
        app:layout_constraintBottom_toTopOf="@+id/yellowCircle"
        app:layout_constraintEnd_toStartOf="@+id/player_1_name"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circle_red" />

    <EditText
        android:id="@+id/player_1_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="38dp"
        android:autofillHints=""
        android:drawableTint="@color/colorRed"
        android:ems="10"
        android:foregroundTint="@color/colorRed"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorRed"
        app:layout_constraintBottom_toTopOf="@+id/player_2_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/yellowCircle"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="61dp"
        android:contentDescription="@string/yellowcircleplayer"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toStartOf="@+id/player_2_name"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circle_yellow" />

    <EditText
        android:id="@+id/player_2_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="61dp"
        android:autofillHints=""
        android:drawableTint="@color/colorYellow"
        android:ems="10"
        android:foregroundTint="@color/colorYellow"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorYellow"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@drawable/btn_ronded"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>